--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 markdown: kramdown
 tag_page: '/tags.html'
-home_page: '/'
+home_page: '/index.html'
 about_page: '/about.html'
 tagline: 'Example tagline'
